// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "wfa/measurement/internal/kingdom/account.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Internal service for persistence of Account entities.
service Accounts {
  rpc CreateAccount(Account) returns (Account);

  rpc ActivateAccount(ActivateAccountRequest) returns (Account);

  rpc ReplaceAccountIdentity(ReplaceAccountIdentityRequest) returns (Account);
}

message OpenIdConnectCredentials {
  string identity_bearer_token = 1;
}

message UsernameCredentials {
  string username = 1;
  string password = 2;
}

message ActivateAccountRequest {
  fixed64 activation_token = 1;

  fixed64 external_account_id = 2;

  oneof credentials {
    OpenIdConnectCredentials open_id_connect_credentials = 3;
    UsernameCredentials username_credentials = 4;
  }
}

message ReplaceAccountIdentityRequest {
  fixed64 external_account_id = 1;

  oneof credentials {
    OpenIdConnectCredentials open_id_connect_credentials = 2;
    UsernameCredentials username_credentials = 3;
  }
}
